Clean secrets and align config

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,8 @@ PORT=3001
 API_SECRET=your_api_secret_key_here
 
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/collat_bot?schema=public"
+# SQLite database used by default
+DATABASE_URL="file:../data/collat_bot.db"
 
 # Solana RPC
 PRIMARY_RPC_ENDPOINT="https://mainnet.helius-rpc.com/?api-key=your_api_key_here"
