feat: switch to Triton RPC

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,7 @@ API_SECRET=your_api_secret_key_here
 DATABASE_URL="postgresql://username:password@localhost:5432/collat_bot?schema=public"
 
 # Solana RPC
-PRIMARY_RPC_ENDPOINT="https://mainnet.helius-rpc.com/?api-key=your_api_key_here"
+PRIMARY_RPC_ENDPOINT="https://kamel-solanam-876d.mainnet.rpcpool.com"
 SECONDARY_RPC_ENDPOINT="https://rpc.triton.one"
 
 # Wallet (IMPORTANT: Never commit the actual private key to version control)
