--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,6 +19,8 @@ SELL_THRESHOLD=10
 BUY_THRESHOLD=5
 SLIPPAGE_TOLERANCE=1.5
 MAX_TRANSACTION_PERCENTAGE=50
+API_CALL_INTERVAL_MS=1000
+MAX_API_CALLS_PER_DAY=8640000
 
 # Notifications
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token
